Added and translated missing text in Store

--- a/core/i18n/resource/i18n/bg-BG.csv
+++ b/core/i18n/resource/i18n/bg-BG.csv
@@ -16,7 +16,7 @@
 "Error with response - bad content-type!","Грешка с отговор - лош тип съдържание!"
 "Error: Error while adding products","Грешка: Грешка при добавяне на продукти"
 "Field is required","Задължително поле"
-"Field is required.","Задължително поле."
+"The field is required.","Задължително поле."
 "Grand total","Общо"
 "Home Page","Начална страница"
 "In stock!","В наличност!"
@@ -416,3 +416,48 @@
 "Suggested Products","Предложени продукти"
 "Shipping Fee","Такса Доставка"
 "VAT (Included)","с ДДС"
+"Open Menu","Отвори менюто"
+"Open search panel","Отвори търсачката"
+"Open Wishlist","Отвори списъка с желания"
+"Open micro cart","Отвори микро количката"
+"Open my account","Отвори моя акаунт"
+"Logout","Изход"
+"Home","Начало"
+"Delivery","Доставка"
+"About us","За нас"
+"About us (Magento CMS)","За нас (Magento CMS)"
+"Customer service (Magento CMS)","Обслужване на клиенти (Magento CMS)"
+"Store locator","Локатор на магазина"
+"Go to Facebook","Отиди във Facebook"
+"Go to Instagram","Отиди в Instagram"
+"Go to Pinterest","Отиди в Pinterest"
+"Go to Youtube","Отиди в Youtube"
+"Legal notice","Правна информация"
+"Privacy policy","Политика за поверителност"
+"Subscribe to the newsletter and receive a coupon for 10% off","Абонирайте се за бюлетина и получете купон с 10% отстъпка"
+"Subscribe","Абонирай се"
+"You are offline. Some features might not be available.","Не сте на линия. Някои функции може да не са налични."
+"Language","Език"
+"English","Английски"
+"Search","Търсене"
+"Log in","Влизане"
+"E-mail address *","Имейл адрес *"
+"Please provide a valid e-mail address.","Моля, посочете валиден имейл адрес."
+"Password *","Парола *"
+"Remember me","Запомни ме"
+"Forgot the password?","Забравена парола?"
+"Log in to your account","Влезте в профила си"
+"or","или"
+"register an account","регистрирайте акаунт"
+"Toggle password visibility","Превключване на видимостта на паролата"
+"The field is required.","Полето е задължително."
+"Checkout","Плащане"
+"Your shopping cart is empty.","Количката Ви е празна."
+"Don"t hesitate and","Не се колебайте и"
+"browse our catalog","разгледайте нашия каталог"
+"to find something beautiful for You!","за да намерите нещо красиво за себе си!"
+"My profile","Моят профил"
+"My shipping details","Моите данни за доставка"
+"My orders","Моите поръчки"
+"My Recently viewed products","Моите наскоро разглеждани продукти"
+"Your Wishlist is empty.","Списъкът Ви с желания е празен."
