--- a/core/i18n/resource/i18n/de-DE.csv
+++ b/core/i18n/resource/i18n/de-DE.csv
@@ -15,7 +15,7 @@
 "Error: Error while adding products","Error: Fehler beim hinzufügen der Produkte"
 "Extension developers would like to thank you for placing an order!","Extension-Entwickler würden sich bei Ihnen gerne dafür bedanken, dass Sie eine Bestellung getätigt haben!"
 "Field is required","Dies ist ein Pflichtfeld"
-"Field is required.","Dies ist ein Pflichtfeld."
+"The field is required.","Dies ist ein Pflichtfeld."
 "Grand total","Gesamtsumme"
 "Home Page","Startseite"
 "In stock!","Auf Lager!"
