--- a/core/i18n/resource/i18n/es-ES.csv
+++ b/core/i18n/resource/i18n/es-ES.csv
@@ -7,7 +7,7 @@
 "Compare Products","Comparar productos"
 "Error with response - bad content-type!","Error con la respuesta - ¡tipo de contenido incorrecto!"
 "Field is required","El campo es requerido"
-"Field is required.","El campo es requerido."
+"The field is required.","El campo es requerido."
 "Grand total","Gran total"
 "Home Page","Página de inicio"
 "Internal validation error. Please check if all required fields are filled in. Please contact us on {email}","Error de validación interna. Por favor, compruebe si se completan todos los campos obligatorios. Póngase en contacto con nosotros en {email}"
