--- a/core/i18n/resource/i18n/et-EE.csv
+++ b/core/i18n/resource/i18n/et-EE.csv
@@ -32,7 +32,7 @@ Checkout,Ostuvormistamine
 "Subtotal incl. tax","Kokku (sisaldab käibemaksu)"
 "Grand total",Kokku
 "Field is required",Kohustuslik
-"Field is required.",Kohustuslik.
+"The field is required.",Kohustuslik.
 "You're logged out","Olete välja logitud"
 "Compare Products","Võrdle tooteid"
 "404 Page Not Found","404 Lehekülge ei leitud"
