--- a/core/i18n/resource/i18n/it-IT.csv
+++ b/core/i18n/resource/i18n/it-IT.csv
@@ -16,7 +16,7 @@
 "Error: Error while adding products","Errore: c'è stato un errore durante l'aggiunta dei prodotti"
 "Extension developers would like to thank you for placing an order!","Gli sviluppatori dell'estensione vorrebbero ringraziarti per aver fatto un ordine!"
 "Field is required","Campo obbligatorio"
-"Field is required.","Campo obbligatorio"
+"The field is required.","Campo obbligatorio"
 "Grand total","Totale"
 "Home Page","Home"
 "In stock!","Disponibile"
