--- a/core/i18n/resource/i18n/ja-JP.csv
+++ b/core/i18n/resource/i18n/ja-JP.csv
@@ -72,8 +72,8 @@
 "No reviews have been posted yet. Please don\","まだレビューは投稿されていません。"
 "No such configuration for the product. Please do choose another combination of attributes.","この商品へのこの構成はありません。別の組み合わせを試してみてください。"
 "Only {maxQuantity} products of this type are available!","Only {maxQuantity} products of this type are available!"
-"Open menu","メニューを開く"
-"Open microcart","マイクロカートを開く"
+"Open Menu","メニューを開く"
+"Open micro cart","マイクロカートを開く"
 "Open my account","アカウントを開く"
 "Open search panel","検索パネルを開く"
 "Open wishlist","欲しいものリストを開く"
@@ -159,7 +159,7 @@
 "Your feedback is important for us. Let us know what we could improve.","あなたからのフィードバックは重要です。どこを改善できるか是非お伝えください。"
 "Your purchase","購入"
 "Your shopping cart is empty.","ショッピングカートは空です。"
-"Your wishlist is empty.","お気に入りリストは空です。"
+"Your Wishlist is empty.","お気に入りリストは空です。"
 "Zip-code","郵便番号"
 "Zipcode","郵便番号"
 "a chat","チャット"
