--- a/core/i18n/resource/i18n/nl-NL.csv
+++ b/core/i18n/resource/i18n/nl-NL.csv
@@ -16,7 +16,7 @@ Checkout,Afrekenen
 Compare Products,Producten vergelijken
 Error with response - bad content-type!,Error with response - bad content-type!
 Field is required,Veld is verplicht
-Field is required.,Velden zijn verplicht.
+The field is required.,Velden zijn verplicht.
 Grand total,Eindtotaal
 Home Page,Homepage
 Internal validation error. Please check if all required fields are filled in. Please contact us on {email},Interne validatie fout. Check of alle verplichte velden ingevuld zijn. Neem contact met ons op via {email}.
