--- a/core/i18n/resource/i18n/pl-PL.csv
+++ b/core/i18n/resource/i18n/pl-PL.csv
@@ -8,7 +8,7 @@
 "Error refreshing user token. User is not authorized to access the resource","Błąd odświeżania tokenu użytkownika. Użytkownik nie dostępu do zasobu"
 "Error with response - bad content-type!","Błąd odpowiedzi - bad content-type!"
 "Field is required","Pole jest wymagane"
-"Field is required.","Pole jest wymagane."
+"The field is required.","Pole jest wymagane."
 "Grand total","Łączna suma"
 "Home Page","Strona główna"
 "In stock!","W magazynie!"
