--- a/src/themes/default-procc/resource/i18n/ar-SY.csv
+++ b/src/themes/default-procc/resource/i18n/ar-SY.csv
@@ -117,8 +117,8 @@
 "No products found!","لم يتم إيجاد أي منتج!"
 "No results were found.","لم يتم العثور على نتائج"
 "No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!","لم يتم إضافة مراجعات بعد. الرجاء عدم التردد بمشاركتنا برأيك وكتابة مراجعة!"
-"Open menu","فتح القائمة"
-"Open microcart","فتح سلة التسوّق"
+"Open Menu","فتح القائمة"
+"Open micro cart","فتح سلة التسوّق"
 "Open my account","فتح حسابي"
 "Open search panel","فتح لوحة البحث"
 "Open wishlist","فتح المفضّلة"
@@ -141,7 +141,7 @@
 "Please change Your search criteria and try again. If still not finding anything relevant", "يرجى المحاولة مرّة ثانية بعد تغيير معايير البحث إن لم تجد أي شيء ذو صلة"
 "Please check if all data are correct","الرجاء التأكّد من صحّة كافة البيانات"
 "Please confirm the order you placed when you were offline","الرجاء التأكيد على إتمام الطلبية التي أنشأتها عندما كنت غير متّصل بالإنترنت"
-"Please provide valid e-mail address.","يرجى إدخال بريد إلكتروني صحيح"
+"Please provide a valid e-mail address.","يرجى إدخال بريد إلكتروني صحيح"
 "Price {variant}","السعر {variant}"
 "Price","السعر"
 "Privacy policy","سياسة الخصوصيّة"
@@ -241,7 +241,7 @@
 "Your feedback is important for us. Let us know what we could improve.","رأيك يهمّنا،دعنا نعلم كيف نستطيع أن نصبح أفضل."
 "Your purchase","مشترياتك"
 "Your shopping cart is empty.","سلّة تسوّقك فارغة."
-"Your wishlist is empty.","قائمة مفضّلتك فارغة."
+"Your Wishlist is empty.","قائمة مفضّلتك فارغة."
 "Zip-code *","الرمز البريدي *"
 "Zip-code must have at least 3 letters.","يجب أن يحتوي الرمز البريدي على ثلاث حروف"
 "Zip-code","الرمز البريدي"
