--- a/src/themes/default-procc/resource/i18n/cs-CZ.csv
+++ b/src/themes/default-procc/resource/i18n/cs-CZ.csv
@@ -120,8 +120,8 @@
 "No products yet","Dosud žádné produkty"
 "No results were found.","Nebyly nalezeny žádné výsledky."
 "No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!","Zatím nebyly přidány žádné recenze. Neváhejte, sdělte nám svůj názor a napište první recenzi!"
-"Open menu","Otevřít menu"
-"Open microcart","Otevřít náhled košíku"
+"Open Menu","Otevřít menu"
+"Open micro cart","Otevřít náhled košíku"
 "Open my account","Otevřít můj účet"
 "Open search panel","Otevřít panel pro vyhledávání"
 "Open wishlist","Otevřít seznam přání"
@@ -144,7 +144,7 @@
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Prosíme změňte svá vyhledávací kritéria a zkuste znovu. Pokud stále nenacházíte, co jste hledali, zkuste nějaké z našich bestsellerů!"
 "Please check if all data are correct","Zkontrolujte, zda jsou všechny údaje správné"
 "Please confirm the order you placed when you were offline","Prosíme potvrďte objednávku, kterou jste zadali, když jste byli v režimu offline"
-"Please provide valid e-mail address.","Prosíme uveďte platnou e-mailovou adresu."
+"Please provide a valid e-mail address.","Prosíme uveďte platnou e-mailovou adresu."
 "Price {variant}","Cena {variant}"
 "Price","Cena"
 "Privacy policy","Zásady ochrany osobních údajů"
@@ -244,7 +244,7 @@
 "Your feedback is important for us. Let us know what we could improve.","Vaše zpětná vazba je pro nás důležitá. Dejte nám vědět, co bychom mohli zlepšit."
 "Your purchase","Váš nákup"
 "Your shopping cart is empty.","Váš nákupní košík je prázdný."
-"Your wishlist is empty.","Váš seznam přání je prázdný."
+"Your Wishlist is empty.","Váš seznam přání je prázdný."
 "Zip-code *","PSČ *"
 "Zip-code must have at least 3 letters.","PSČ musí mít alespoň 3 čísla."
 "Zip-code","PSČ"
