--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -132,8 +132,8 @@
 "No products yet","No products yet"
 "No results were found.","No results were found."
 "No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!","No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!"
-"Open menu","Open menu"
-"Open microcart","Open microcart"
+"Open Menu","Open Menu"
+"Open micro cart","Open micro cart"
 "Open my account","Open my account"
 "Open search panel","Open search panel"
 "Open wishlist","Open wishlist"
@@ -156,7 +156,7 @@
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!"
 "Please check if all data are correct","Please check if all data are correct"
 "Please confirm the order you placed when you were offline","Please confirm the order you placed when you were offline"
-"Please provide valid e-mail address.","Please provide valid e-mail address."
+"Please provide a valid e-mail address.","Please provide a valid e-mail address."
 "Price {variant}","Price {variant}"
 "Price","Price"
 "Price: High to low","Price: High to low"
@@ -270,7 +270,7 @@
 "Your feedback is important for us. Let us know what we could improve.","Your feedback is important for us. Let us know what we could improve."
 "Your purchase","Your purchase"
 "Your shopping cart is empty.","Your shopping cart is empty."
-"Your wishlist is empty.","Your wishlist is empty."
+"Your Wishlist is empty.","Your Wishlist is empty."
 "Zip-code *","Zip-code *"
 "Zip-code must have at least 3 letters.","Zip-code must have at least 3 letters."
 "Zip-code","Zip-code"
