--- a/src/themes/default-procc/resource/i18n/fr-FR.csv
+++ b/src/themes/default-procc/resource/i18n/fr-FR.csv
@@ -112,8 +112,8 @@
 "No orders yet","Aucune commande"
 "No products found!","Aucun produit trouvé !"
 "No results were found.","Aucun résultat n'a été trouvé."
-"Open menu","Ouvrir le menu"
-"Open microcart","Ouvrir le panier"
+"Open Menu","Ouvrir le menu"
+"Open micro cart","Ouvrir le panier"
 "Open my account","Ouvrir mon compte"
 "Open search panel","Ouvrir le panneau de recherche"
 "Open wishlist","Ouvrir la liste de souhaits"
@@ -136,7 +136,7 @@
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Veuillez changer vos critères de recherche et réessayer. Si vous ne trouvez toujours rien d'intéressant, vous pouvez visiter notre page d'accueil et consulter nos meilleures ventes !"
 "Please check if all data are correct","Veuillez vérifier si toutes les données sont correctes"
 "Please confirm the order you placed when you were offline","Veuillez confirmer la commande que vous avez passé lorsque vous étiez hors-ligne"
-"Please provide valid e-mail address.","Veuillez saisir une adresse e-mail valide."
+"Please provide a valid e-mail address.","Veuillez saisir une adresse e-mail valide."
 "Price {variant}","Prix {variant}"
 "Price","Prix"
 "Privacy policy","Politique de confidentialité"
@@ -231,7 +231,7 @@
 "Your feedback is important for us. Let us know what we could improve.","Vos retours nous intéressent. Faites-nous savoir ce que nous pouvons améliorer."
 "Your purchase","Votre achat"
 "Your shopping cart is empty.","Votre panier est vide."
-"Your wishlist is empty.","Votre liste de souhaits est vide."
+"Your Wishlist is empty.","Votre liste de souhaits est vide."
 "Zip-code *","Code postal *"
 "Zip-code must have at least 3 letters.","Le code postal doit contenir au moins 3 chiffres."
 "Zip-code","Code postal"
