--- a/src/themes/default-procc/resource/i18n/it-IT.csv
+++ b/src/themes/default-procc/resource/i18n/it-IT.csv
@@ -132,8 +132,8 @@
 "No products yet","Ancora nessun prodotto"
 "No results were found.","Non abbiamo trovato niente"
 "No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!","Non ci sono ancora recensioni per questo prodotto. Non esitare a condividere la tua opinione e scrivi la prima recensione!"
-"Open menu","Apri menu"
-"Open microcart","Apri il mini carrello"
+"Open Menu","Apri menu"
+"Open micro cart","Apri il mini carrello"
 "Open my account","Apri il mio account"
 "Open search panel","Apri il pannello di ricerca"
 "Open wishlist","Apri la lista dei desideri"
@@ -156,7 +156,7 @@
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Per favore cambia i tuoi parametri di ricerca e riprova. Se ancora non trovi nulla di rilevante, torna in home page e prova qualcuno dei nostri prodotti più venduti!"
 "Please check if all data are correct","Controlla che tutte le informazioni siano corrette"
 "Please confirm the order you placed when you were offline","Conferma l'ordine che hai creato quando eri offline"
-"Please provide valid e-mail address.","Inserisci un indirizzo email valido"
+"Please provide a valid e-mail address.","Inserisci un indirizzo email valido"
 "Price {variant}","Prezzo {variant}"
 "Price","Prezzo"
 "Price: High to low","Prezzo: dal più caro al meno caro"
@@ -270,7 +270,7 @@
 "Your feedback is important for us. Let us know what we could improve.","La tua opinione è importante per noi. Facci sapere cosa possiamo migliorare."
 "Your purchase","Il tuo acquisto"
 "Your shopping cart is empty.","Il tuo carrello è vuoto"
-"Your wishlist is empty.","La lista dei desideri è vuota."
+"Your Wishlist is empty.","La lista dei desideri è vuota."
 "Zip-code *","CAP*"
 "Zip-code must have at least 3 letters.","Il codice postale deve essere composto da almeno 3 lettere"
 "Zip-code","CAP"
