--- a/src/themes/default-procc/resource/i18n/ja-JP.csv
+++ b/src/themes/default-procc/resource/i18n/ja-JP.csv
@@ -97,8 +97,8 @@
 "No orders yet","また注文されていません"
 "No products found!","商品がありません!"
 "No results were found.","なにもありません"
-"Open menu","メニューを開く"
-"Open microcart","小さなカートを開く"
+"Open Menu","メニューを開く"
+"Open micro cart","小さなカートを開く"
 "Open my account","自分のアカウントを開く"
 "Open search panel","検索パネルを開く"
 "Open wishlist","欲しいモノリストを開く"
@@ -117,7 +117,7 @@
 "Phone number may be needed by carrier","発送に電話番号が必要な事があります"
 "Place the order","注文を行う"
 "Please check if all data are correct","全てのデータが正しいかどうか確認してください"
-"Please provide valid e-mail address.","正しいメールアドレスを入力してください"
+"Please provide a valid e-mail address.","正しいメールアドレスを入力してください"
 "Price {variant}","価格 {variant}"
 "Price","価格"
 "Privacy policy","プライバシー・ポリシー"
@@ -203,7 +203,7 @@
 "You must accept the terms and conditions.","利用規格に同意してください"
 "You've entered an incorrect coupon code. Please try again.","クーポンコードが無効です。もう一度試してください。"
 "Your shopping cart is empty.","ショッピングカートは空です"
-"Your wishlist is empty.","欲しいモノリストは空です"
+"Your Wishlist is empty.","欲しいモノリストは空です"
 "Zip-code *","郵便番号 *"
 "Zip-code must have at least 3 letters.","郵便番号は最低3文字必要です"
 "Zip-code","郵便番号"
