--- a/src/themes/default-procc/resource/i18n/jp-JP.csv
+++ b/src/themes/default-procc/resource/i18n/jp-JP.csv
@@ -107,7 +107,7 @@
 "My loyalty card","自分のポイントカード"
 "My product reviews","自分の商品レビュー"
 "Wishlist","欲しいモノリスト"
-"Your wishlist is empty.","欲しいモノリストは空です"
+"Your Wishlist is empty.","欲しいモノリストは空です"
 "Add to cart","カートに追加"
 "Select color ","色の選択 "
 "See details","詳細を見る"
@@ -145,7 +145,7 @@
 "I want to create an account'","アカウントを作成する'"
 "My billing address is the same","発送先の住所をコピーする"
 "Tax identification number must have at least 3 letters.","税金IDは最低3文字必要です"
-"Please provide valid e-mail address.","正しいメールアドレスを入力してください"
+"Please provide a valid e-mail address.","正しいメールアドレスを入力してください"
 "Use my company's address details","自分の会社の住所を使う"
 "Passwords must be identical","パスワードは同じである必要があります"
 "E-mail address *","メールアドレス *"
@@ -180,10 +180,10 @@
 "No products found!","商品がありません!"
 "Erin recommends","エリンのおすすめ"
 "Open my account","自分のアカウントを開く"
-"Open microcart","小さなカートを開く"
+"Open micro cart","小さなカートを開く"
 "Open wishlist","欲しいモノリストを開く"
 "Open search panel","検索パネルを開く"
-"Open menu","メニューを開く"
+"Open Menu","メニューを開く"
 "Show subcategories","サブカテゴリーを開く"
 "Back","戻る"
 "Close","閉じる"
