--- a/src/themes/default-procc/resource/i18n/nl-NL.csv
+++ b/src/themes/default-procc/resource/i18n/nl-NL.csv
@@ -123,8 +123,8 @@ No products found!,Geen producten gevonden
 No results were found.,Geen resultaten gevonden.
 No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!,Er zijn nog geen reviews geplaatst. Aarzel niet om uw mening te delen en de eerste recensie te schrijven!
 OK,Oke
-Open menu,Open menu
-Open microcart,Open winkelwagen
+Open Menu,Open Menu
+Open micro cart,Open winkelwagen
 Open my account,Open mijn account
 Open search panel,Open zoekvenster
 Open wishlist,Open verlanglijst
@@ -147,7 +147,7 @@ Phone number may be needed by carrier,Telefoonnummer kan nodig zijn voor vervoer
 Place the order,Plaats bestelling
 Please check if all data are correct,Controleer of alle gegevens correct zijn
 Please confirm the order you placed when you were offline,Bevestig uw offline geplaatste order
-Please provide valid e-mail address.,Geef een geldig e-mailadres op.
+Please provide a valid e-mail address.,Geef een geldig e-mailadres op.
 Price ,Prijs
 Price,Prijs
 Price,Prijs
@@ -245,7 +245,7 @@ Your Account,Uw Account
 Your choice,Jouw keuze
 Your purchase,Uw bestelling
 Your shopping cart is empty.,Uw winkelwagen is leeg.
-Your wishlist is empty.,Uw verlanglijst is leeg
+Your Wishlist is empty.,Uw verlanglijst is leeg
 Zip-code *,Postode *
 Zip-code must have at least 3 letters.,Postcode moet minimaal drie letters bevatten
 Zip-code,Postcode
