--- a/src/themes/default-procc/resource/i18n/pl-PL.csv
+++ b/src/themes/default-procc/resource/i18n/pl-PL.csv
@@ -106,8 +106,8 @@
 "No orders yet","Brak zamówień"
 "No products found!","Brak produktów!"
 "No results were found.","Brak wyników wyszukiwania."
-"Open menu","Otwórz menu"
-"Open microcart","Otwórz mini koszyk"
+"Open Menu","Otwórz menu"
+"Open micro cart","Otwórz mini koszyk"
 "Open my account","Otwórz moje konto"
 "Open search panel","Otwórz wyszukiwanie"
 "Open wishlist","Otwórz listę życzeń"
@@ -129,7 +129,7 @@
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Zmień kryteria wyszukiwania i spróbuj ponownie. Jeśli nadal nie znajdziesz niczego istotnego, odwiedź stronę główną i wypróbuj niektóre z naszych bestsellerów!"
 "Please check if all data are correct","Sprawdź czy wszystkie dane są poprawne"
 "Please confirm the order you placed when you were offline","Potwierdź zamówienie, które złożyłeś będąc w trybie offline"
-"Please provide valid e-mail address.","Podaj prawidłowy adres e-mail."
+"Please provide a valid e-mail address.","Podaj prawidłowy adres e-mail."
 "Price {variant}","Cena {variant}"
 "Price","Cena"
 "Privacy policy","Polityka prywatności"
@@ -224,7 +224,7 @@
 "Your feedback is important for us. Let us know what we could improve.","Twoja opinia jest dla nas ważna. Daj nam znać, co możemy poprawić."
 "Your purchase","Twój zakup"
 "Your shopping cart is empty.","Twój koszyk jest pusty."
-"Your wishlist is empty.","Twoje lista życzeń jest pusta."
+"Your Wishlist is empty.","Twoje lista życzeń jest pusta."
 "Zip-code *","Kod pocztowy *"
 "Zip-code must have at least 3 letters.","Kod pocztowy musi zawierać co najmniej 3 litery."
 "Zip-code","Kod pocztowy"
