--- a/src/themes/default-procc/resource/i18n/ru-RU.csv
+++ b/src/themes/default-procc/resource/i18n/ru-RU.csv
@@ -97,8 +97,8 @@
 "No orders yet","Заказов пока нет"
 "No products found!","Товары не найдены!"
 "No results were found.","Ничего не найдено."
-"Open menu","Открыть меню"
-"Open microcart","Открыть корзину"
+"Open Menu","Открыть меню"
+"Open micro cart","Открыть корзину"
 "Open my account","Открыть личный кабинет"
 "Open search panel","Открыть панель поиска"
 "Open wishlist","Открыть список пожеланий"
@@ -117,7 +117,7 @@
 "Phone number may be needed by carrier","Номер телефона может понадобиться курьеру"
 "Place the order","Оформить заказ"
 "Please check if all data are correct","Пожалуйста проверьте корректность всех данных"
-"Please provide valid e-mail address.","Пожалуйста укажите валидный электронный адрес."
+"Please provide a valid e-mail address.","Пожалуйста укажите валидный электронный адрес."
 "Price {variant}","Цена {variant}"
 "Price","Цена"
 "Privacy policy","Политика конфиденциальности"
@@ -202,7 +202,7 @@
 "You must accept the terms and conditions.","Вам необходимо принять условия и положения."
 "You've entered an incorrect coupon code. Please try again.","Вы ввели неверный код купона. Пожалуйста попробуйте еще раз."
 "Your shopping cart is empty.","Ваша корзина пустая."
-"Your wishlist is empty.","Ваш список пожеланий пуст."
+"Your Wishlist is empty.","Ваш список пожеланий пуст."
 "Zip-code *","Почтовый индекс *"
 "Zip-code must have at least 3 letters.","Почтовый индекс должен состоять из минимум 3 символов."
 "Zip-code","Почтовый индекс"
