--- a/core/i18n/resource/i18n/cs-CZ.csv
+++ b/core/i18n/resource/i18n/cs-CZ.csv
@@ -13,7 +13,7 @@
 "Error with response - bad content-type!","Chyba s odpovědí - špatný typ obsahu!"
 "Extension developers would like to thank you for placing an order!","Vývojáři rozšíření by rádi poděkovali za zadání vaší objednávky!"
 "Field is required","Pole je povinné"
-"Field is required.","Pole je povinné."
+"The field is required.","Pole je povinné."
 "Grand total","Celkový součet"
 "Home Page","Domovská stránka"
 "In stock!","Skladem!"
