--- a/core/i18n/resource/i18n/en-US.csv
+++ b/core/i18n/resource/i18n/en-US.csv
@@ -16,7 +16,7 @@
 "Error with response - bad content-type!","Error with response - bad content-type!"
 "Error: Error while adding products","Error: Error while adding products"
 "Field is required","Field is required"
-"Field is required.","Field is required."
+"The field is required.","The field is required."
 "Grand total","Grand total"
 "Home Page","Home Page"
 "In stock!","In stock!"
@@ -416,3 +416,48 @@
 "Suggested Products","Suggested Products"
 "Shipping Fee","Shipping Fee"
 "VAT (Included)","VAT (Included)"
+"Open Menu","Open Menu"
+"Open search panel","Open search panel"
+"Open Wishlist","Open Wishlist"
+"Open micro cart","Open micro cart"
+"Open my account","Open my account"
+"Logout","Logout"
+"Home","Home"
+"Delivery","Delivery"
+"About us","About us"
+"About us (Magento CMS)","About us (Magento CMS)"
+"Customer service (Magento CMS)","Customer service (Magento CMS)"
+"Store locator","Store locator"
+"Go to Facebook","Go to Facebook"
+"Go to Instagram","Go to Instagram"
+"Go to Pinterest","Go to Pinterest"
+"Go to Youtube","Go to Youtube"
+"Legal notice","Legal notice"
+"Privacy policy","Privacy policy"
+"Subscribe to the newsletter and receive a coupon for 10% off","Subscribe to the newsletter and receive a coupon for 10% off"
+"Subscribe","Subscribe"
+"You are offline. Some features might not be available.","You are offline. Some features might not be available."
+"Language","Language"
+"English","English"
+"Search","Search"
+"Log in","Log in"
+"E-mail address *","E-mail address *"
+"Please provide a valid e-mail address.","Please provide a valid e-mail address."
+"Password *","Password *"
+"Remember me","Remember me"
+"Forgot the password?","Forgot the password?"
+"Log in to your account","Log in to your account"
+"or","or"
+"register an account","register an account"
+"Toggle password visibility","Toggle password visibility"
+"The field is required.","The field is required."
+"Checkout","Checkout"
+"Your shopping cart is empty.","Your shopping cart is empty."
+"Don"t hesitate and","Don"t hesitate and"
+"browse our catalog","browse our catalog"
+"to find something beautiful for You!","to find something beautiful for You!"
+"My profile","My profile"
+"My shipping details","My shipping details"
+"My orders","My orders"
+"My Recently viewed products","My Recently viewed products"
+"Your Wishlist is empty.","Your Wishlist is empty."
