--- a/core/i18n/resource/i18n/fr-FR.csv
+++ b/core/i18n/resource/i18n/fr-FR.csv
@@ -8,7 +8,7 @@
 "Error refreshing user token. User is not authorized to access the resource","Une erreur est survenue. L'utilisateur n'est pas autorisé à accéder à cette ressource"
 "Error with response - bad content-type!","Erreur avec réponse - mauvais type de contenu !"
 "Field is required","Champ requis"
-"Field is required.","Champ requis."
+"The field is required.","Champ requis."
 "Grand total","Total"
 "Home Page","Page d'accueil"
 "In stock!","En stock !"
