--- a/core/i18n/resource/i18n/pt-PT.csv
+++ b/core/i18n/resource/i18n/pt-PT.csv
@@ -7,7 +7,7 @@
 "Compare Products","Comparar Produtos"
 "Error with response - bad content-type!","Erro na resposta do servidor - bad content-type!"
 "Field is required","Campo obrigatório"
-"Field is required.","Campo obrigatório."
+"The field is required.","Campo obrigatório."
 "Grand total","Total"
 "Home Page","Página Inicial"
 "Internal Application error while refreshing the tokens. Please clear the storage and refresh page.","Erro Interno da Aplicação ao atualizar as tokens. Por favor limpe o cache do seu browser e recarregue a página."
