--- a/src/themes/default-procc/resource/i18n/de-DE.csv
+++ b/src/themes/default-procc/resource/i18n/de-DE.csv
@@ -123,8 +123,8 @@
 "No products yet","Keine Produkte"
 "No results were found.","Es wurden keine Ergebnisse gefunden."
 "No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!","Bisher wurden keine Bewertungen abgegeben. Bitte zögern Sie nicht, Ihre Beurteilung abzugeben und schreiben Sie die erste Bewertung!"
-"Open menu","Menü öffnen"
-"Open microcart","Microcart öffnen"
+"Open Menu","Menü öffnen"
+"Open micro cart","Microcart öffnen"
 "Open my account","Mein Konto öffnen"
 "Open search panel","Suche öffnen"
 "Open wishlist","Wunschliste öffnen"
@@ -147,7 +147,7 @@
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","Bitte ändern Sie Ihre Suchkriterien und versuchen Sie es erneut. Wenn Sie weiterhin nichts Relevantes finden können, besuchen Sie unsere Homepage und probieren Sie einige unserer Bestseller!"
 "Please check if all data are correct","Bitte überprüfen Sie, ob alle Daten korrekt sind"
 "Please confirm the order you placed when you were offline","Bitte bestätigen Sie Ihre Bestellung, die Sie im Offline-Modus abgegeben haben"
-"Please provide valid e-mail address.","Bitte eine gültige E-Mail-Adresse eingeben."
+"Please provide a valid e-mail address.","Bitte eine gültige E-Mail-Adresse eingeben."
 "Price {variant}","Preis {variant}"
 "Price","Preis"
 "Price: High to low","Preis: absteigend"
@@ -251,7 +251,7 @@
 "Your feedback is important for us. Let us know what we could improve.","Ihr Feedback ist wichtig für uns. Lassen Sie uns wissen, was wir verbessern können."
 "Your purchase","Ihr Einkauf"
 "Your shopping cart is empty.","Ihr Warenkorb ist leer."
-"Your wishlist is empty.","Ihre Wunschliste ist leer."
+"Your Wishlist is empty.","Ihre Wunschliste ist leer."
 "Zip-code *","Postleitzahl *"
 "Zip-code must have at least 3 letters.","Die Postleitzahl muss aus mindestens 3 Zeichen bestehen."
 "Zip-code","Postleitzahl"
