--- a/src/themes/default-procc/resource/i18n/es-ES.csv
+++ b/src/themes/default-procc/resource/i18n/es-ES.csv
@@ -94,7 +94,7 @@
 "Phone number may be needed by carrier","El operador puede necesitar el número de teléfono"
 "Place the order","Hacer el pedido"
 "Please check if all data are correct","Por favor verifique si todos los datos son correctos"
-"Please provide valid e-mail address.","Proporcione una dirección de correo electrónico válida."
+"Please provide a valid e-mail address.","Proporcione una dirección de correo electrónico válida."
 "Price {variant}","Precio {variant}"
 "Price","Precio"
 "Privacy policy","Política de privacidad"
@@ -161,7 +161,7 @@
 "You have no items to compare.","No tienes articulos para comparar."
 "You must accept the terms and conditions.","Debe aceptar los Términos y Condiciones."
 "Your shopping cart is empty.","Su cesta está vacía."
-"Your wishlist is empty.","Tu lista de deseos esta vacía."
+"Your Wishlist is empty.","Tu lista de deseos esta vacía."
 "Zip-code *","Código postal *"
 "Zip-code must have at least 3 letters.","El código postal debe tener al menos 3 letras."
 "Zip-code","Código postal"
