--- a/src/themes/default-procc/resource/i18n/pt-BR.csv
+++ b/src/themes/default-procc/resource/i18n/pt-BR.csv
@@ -97,8 +97,8 @@
 "No orders yet","Nenhum pedido ainda"
 "No products found!","Nenhum produto encontrado!"
 "No results were found.","Nenhum resultado foi encontrado."
-"Open menu","Abrir menu"
-"Open microcart","Abrir mini-carrinho"
+"Open Menu","Abrir menu"
+"Open micro cart","Abrir mini-carrinho"
 "Open my account","Abrir minha conta"
 "Open search panel","Abrir painel de busca"
 "Open wishlist","Abrir lista de desejos"
@@ -117,7 +117,7 @@
 "Phone number may be needed by carrier","Telefone pode ser necessário pelo método de entrega"
 "Place the order","Enviar o pedido"
 "Please check if all data are correct","Por favor verifique se todos os dados informados estão corretos "
-"Please provide valid e-mail address.","Por favor informe um e-mail válido."
+"Please provide a valid e-mail address.","Por favor informe um e-mail válido."
 "Price {variant}","Preço {variant}"
 "Price","Preço"
 "Privacy policy","Política de Privacidade"
@@ -202,7 +202,7 @@
 "You must accept the terms and conditions.","Você deve aceitar os termos e condições."
 "You've entered an incorrect coupon code. Please try again.","Você informou um código de cupom inválido. Por favor tente novamente."
 "Your shopping cart is empty.","Seu carrinho de compra está vazio."
-"Your wishlist is empty.","Sua lista de desejos está vazia."
+"Your Wishlist is empty.","Sua lista de desejos está vazia."
 "Zip-code *","CEP *"
 "Zip-code must have at least 3 letters.","CEP precisa ter ao menos 3 letras."
 "Zip-code","CEP"
