--- a/src/themes/default-procc/resource/i18n/zh-cn.csv
+++ b/src/themes/default-procc/resource/i18n/zh-cn.csv
@@ -116,8 +116,8 @@
 "No products yet","还没有商品"
 "No results were found.","没有找到."
 "No reviews have been posted yet. Please don't hesitate to share Your opinion and write the first review!","还没有评论发布。 请不要犹豫，分享您的意见并撰写第一篇评论!"
-"Open menu","打开菜单"
-"Open microcart","打开微型购物车"
+"Open Menu","打开菜单"
+"Open micro cart","打开微型购物车"
 "Open my account","打开我的帐户"
 "Open search panel","打开搜索面板"
 "Open wishlist","打开心愿单"
@@ -139,7 +139,7 @@
 "Please change Your search criteria and try again. If still not finding anything relevant, please visit the Home page and try out some of our bestsellers!","请更改您的搜索条件，然后重试。 如果仍然没有找到任何相关内容，请访问主页并阅读一些畅销书!"
 "Please check if all data are correct","请检查所有数据是否正确"
 "Please confirm the order you placed when you were offline","请确认您离线时的订单"
-"Please provide valid e-mail address.","请提供有效的电子邮件地址."
+"Please provide a valid e-mail address.","请提供有效的电子邮件地址."
 "Price {variant}","价格 {variant}"
 "Price","价格"
 "Price: High to low","价格:从高到低"
@@ -240,7 +240,7 @@
 "Your feedback is important fo us. Let us know what we could improve.","您的反馈对我们很重要。 让我们知道我们可以改进什么."
 "Your purchase","你的购买"
 "Your shopping cart is empty.","购物车空空荡荡."
-"Your wishlist is empty.","你还没心仪的商品."
+"Your Wishlist is empty.","你还没心仪的商品."
 "Zip-code *","邮编 *"
 "Zip-code must have at least 3 letters.","邮编至少3个字符."
 "a chat","聊天"
